Fix sidebar stretching side effects
Main content doesn't stretch anymore but it's better that way (brings docInfo up with content shorter than sidebar)

--- a/css/spacious.less
+++ b/css/spacious.less
@@ -315,6 +315,9 @@ hr {
     border-style: none none none solid;
     border-width: 0 0 0 1px;
 }
+div.vr.notvisibleifextracted {
+    visibility: visible;
+}
 
 .smaller {
     font-size: 87.5%;
