--- a/css/src/spacious.less
+++ b/css/src/spacious.less
@@ -277,6 +277,9 @@ hr {
     width: 0;
     margin: 1rem 0;
 }
+div.vr.notvisibleifextracted {
+    visibility: visible;
+}
 
 .smaller {
     font-size: 87.5%;
